--- a/Final/Blog-Website/style.css
+++ b/Final/Blog-Website/style.css
@@ -85,20 +85,23 @@ header {
     align-items: center;
     background-color: #f6f6f6;
     margin: 5rem;
-    padding: 5rem
+    padding: 5rem;
+    flex-flow: wrap;
 }
 .popular.blogs h2{
     text-align: center;
-    padding:  2rem;
+    padding:2rem;
+    text-wrap:wrap;
 
 }
 .mpora{
    background-color: #f6f6f6; 
    padding: 1rem;
+   flex-flow: wrap;
 }
 .mpora p {
     font-size: 25px;
-    line-height: 1.9;
+    line-height: 1.9rem;
 }
 .mpora.img{
     margin: 5rem;
@@ -114,6 +117,7 @@ header {
 .moveunitedsport{
     background-color: #f6f6f6; 
     padding: 1rem;
+    gap: 2rem;
 }
 .moveunitedsport.img{
     margin: 5rem;
@@ -137,7 +141,7 @@ main {
   }
   
   .contact-section {
-    width: 80%;
+    width: 100%;
     margin-top: 20px;
   }
   .contact-section h3{
@@ -175,7 +179,7 @@ footer {
   }
   
   .footer-content {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -187,13 +191,13 @@ footer {
     margin-bottom: 10px;
   }
   
-  nav a {
+  .footer-content nav a {
     margin:19px;
     text-decoration: none;
     color:black ;
   }
   
-  nav a:hover {
+  .footer-content nav a:hover {
     text-decoration: underline;
   }
     
